
Package: PSCBS
==============

Version: 0.20.0 [2012-02-24]
o Added alpha version of callCopyNeutral() for PairedPSCBS, which
  certainly will be updated in the future.  This caller is
  tested by the system tests.
o Added some internal utility functions for PairedPSCBS taken
  from the aroma.cn package.  Some of these may become public
  later, but for they should be considered internal.


Version: 0.19.8 [2012-02-23]
o ROBUSTNESS: Package now explicitly depends on 'utils'.


Version: 0.19.7 [2012-02-22]
o BUG FIX: findLargeGaps() did not handle missing values for
  argument 'chromosome'.
o BUG FIX: segmentByCBS(..., knownSegments=knownSegments) would
  incorrectly throw a sanity-check exception if 'knownSegments'
  contains a segment with 'start' and 'stop' positions being equal.
o BUG FIX: Argument 'calls' of plotTracks() for PairedPSCBS was ignored
  if more than one chromosome was plotted.


Version: 0.19.6 [2012-01-24]
o ROBUSTNESS: Now getCallStatistics() for CBS asserts that calls have
  been made.  If not, an exception is thrown.


Version: 0.19.5 [2012-01-21]
o DOCUMENTATION: Added details to the help of callLOH() and callAB() on
  the difference between (AB,LOH)=(TRUE,FALSE) and (AB,LOH)=(TRUE,NA).
o Corrected some of verbose messages of estimateDeltaLOHByMinC1ForNonAB()
  for PairedPSCBS objects.


Version: 0.19.4 [2012-01-10]
o Now example(segmentByPairedPSCBS) and the system tests that are run
  by R CMD check are tuned to (by default) run much faster by segmenting
  using fewer data points and bootstrapping using fewer samples.  This
  update was done to meet the new CRAN policy.  By setting environment
  variable _R_CHECK_FULL_ to '1' the full data set is used instead.


Version: 0.19.3 [2012-01-09]
o ROBUSTNESS: Now extractSegments() for PairedPSCBS gives an informative
  error message that it is not supported if CNs were segmented using 
  flavor "tcn,dh".
o BUG FIX: postsegmentTCN() for PairedPSCBS could generate an invalid